# sc2-rl-infra

./: .gitignore  00_OVERVIEW.md  01_PHASE0_infra.md  NOTES.md  README.md  RESULTS.md  environment.yml  pyproject.toml
sc2_rl_infra/: __init__.py  benchmark_parallel.py  benchmark_throughput.py  demo_random_agent.py  live_view.py  parse_replay.py
sc2_rl_infra/online/: __init__.py  a2c_beacon.py  checkpoint_agent.py
tools/: vnc.sh
